--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,52 +1,44 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
-
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.tencent.qcloud.suixinbo"
         minSdkVersion 17
-        targetSdkVersion 24
+        targetSdkVersion 26
 //        versionCode 1
 //        versionName "1.0"
     }
-
     packagingOptions{
         exclude '*.apk'
     }
     dexOptions {
         jumboMode true
-        incremental false
     }
     lintOptions{
         abortOnError false
         disable 'MissingTranslation'
     }
-
-
-
-
     buildTypes {
         release {
             minifyEnabled  false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 	}
-
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:24.0.0'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.tencent.ilivesdk:ilivesdk:1.7.2'
-    compile 'com.tencent.livesdk:livesdk:1.1.4'
-    compile 'com.tencent.rtmpsdk:rtmpsdk:1.0.1'
-    compile 'com.tencent.ilivefilter:liteav_normal:1.1.18'
-    compile 'com.tencent.iliveptufilter:iliveptufilter:1.0.4'
-    compile files('libs/MobCommons-2017.0216.1054.jar')
-    compile files('libs/MobTools-2017.0216.1054.jar')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.tencent.ilivesdk:ilivesdk:1.7.2'
+    implementation 'com.tencent.livesdk:livesdk:1.1.4'
+    implementation 'com.tencent.rtmpsdk:rtmpsdk:1.0.1'
+    implementation 'com.tencent.ilivefilter:liteav_normal:1.1.18'
+    implementation 'com.tencent.iliveptufilter:iliveptufilter:1.0.4'
+    implementation files('libs/MobCommons-2017.0216.1054.jar')
+    implementation files('libs/MobTools-2017.0216.1054.jar')
 }
